# open-bist-terminal

./: .gitignore  README.md  dev.bat  event-study.bat  poll-kap.bat  refresh.bat  start.bat  start.ps1  start.sh  stop.bat  stop.ps1  stop.sh  value.bat
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  cache.py  config.py  config_store.py  main.py  pipeline.py  scheduler.py  seed_config.py
backend/app/backtest/: __init__.py  calibration.py  event_study.py  exit_study.py  metrics.py  runner.py
backend/app/db/: base.py  models.py  upsert.py
backend/app/engine/: __init__.py  event_digest.py  features.py  fscore.py  gates.py  indicators.py  kap_grade.py  paper_trader.py  pead.py  priority.py  scoring.py  sector_macro.py  setup_outcomes.py  setup_scan.py  setups.py  target_bands.py  thesis_grade.py
backend/app/llm/: __init__.py  brain.py  budget.py  gemini_client.py  narrative.py  openai_client.py  outlook.py
backend/app/news/: __init__.py  events.py  kap.py  llm_interpret.py
backend/app/risk/: __init__.py  circuit.py  portfolio.py  profiles.py  sizing.py
backend/scripts/: check_grounding.py  evaluate_outcomes.py  fetch_history.py  poll_kap.py  populate_value.py  refresh_fundamentals_all.py  run_backtest.py  run_event_study.py  run_scoring.py  scan_setups.py  setup_db.py
backend/tests/: test_brain.py  test_circuit.py  test_config_seed.py  test_event_study.py  test_fscore.py  test_gemini.py  test_indicators.py  test_metrics.py  test_narrative.py  test_openai_client.py  test_paper.py  test_pead.py  test_priority.py  test_risk_profiles.py  test_scheduler.py  test_scoring.py  test_sector_macro.py  test_setup_outcomes.py  test_setups.py  test_sizing.py  test_target_bands.py  test_thesis_grade.py
(+32 files in other folders)
